refactor: 重构为Java记录类并简化代码
将 ToolCall、Entry、SessionInfo、SkillRoot、WorkspaceInfo、SkillV2Impl 等数据类转换为 record，统一接口方法为无 get 前缀的访问器风格；使用模式变量、字符串拼接替代 StringBuilder，移除冗余三元表达式与泛型钻石符号。